fix scrolling issue on mobile

--- a/index.css
+++ b/index.css
@@ -24,6 +24,7 @@
 body {
   font-family: 'Nunito', sans-serif;
   touch-action: manipulation;
+  overscroll-behavior: none;
   background-color: var(--color-surface);
   color: var(--color-text-primary);
   transition: background-color 0.3s, color 0.3s;
